# kargozaar.com

./: CMakeLists.txt  README.md  build-config.cmake  definitions.cmake  dependencies.cmake  product-info.cmake  resources.cmake
CMakeModules/: FindGeoIP.cmake  FindVMime.cmake  FindWt.cmake  FindcURLpp.cmake  Findlibcurl.cmake  Findunzip.cmake
CoreLib/: CMakeLists.txt  archiver.cpp  archiver.hpp  corelib.hpp  crypto.cpp  crypto.hpp  csharp-token-compat-crypto.txt  db.cpp  db.hpp  exception.cpp  exception.hpp  http.cpp  http.hpp  httpstatus.hpp  io.cpp  io.hpp  log.cpp  log.hpp  mail.cpp  mail.hpp  main.cpp  make_unique.hpp  system.cpp  system.hpp
REST/: CMakeLists.txt  apiresource.cpp  apiresource.hpp  cgienv.cpp  cgienv.hpp  cgiroot.cpp  cgiroot.hpp  dbtables.cpp  dbtables.hpp  div.cpp  div.hpp  exception.cpp  exception.hpp  home.cpp  home.hpp  jsonexception.cpp  jsonexception.hpp  main.cpp  page.cpp  page.hpp  publicapiresource.cpp  publicapiresource.hpp  rt.cpp  rt.hpp  servicecontract.cpp  servicecontract.hpp  stockupdateworker.cpp  stockupdateworker.hpp  versioninfo.hpp  xmlexception.cpp  xmlexception.hpp
REST/resources/: app.rc  home.css
_docs/: csharp-token-compat-crypto.txt  tips.txt
